--- a/CovGym/CovGym/CovGym.csproj
+++ b/CovGym/CovGym/CovGym.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
@@ -91,6 +92,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="bdgimnasioDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>bdgimnasioDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ConexionBD.cs" />
     <Compile Include="frmBuscar.cs">
       <SubType>Form</SubType>
@@ -243,6 +249,17 @@
     <EmbeddedResource Include="frmAcceso.resx">
       <DependentUpon>frmAcceso.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="bdgimnasioDataSet.xsc">
+      <DependentUpon>bdgimnasioDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="bdgimnasioDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>bdgimnasioDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="bdgimnasioDataSet.xss">
+      <DependentUpon>bdgimnasioDataSet.xsd</DependentUpon>
+    </None>
     <None Include="CovGym_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
